
2011-12-12  Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_cursor_word_start/end.
	Those functions let you jump to the start/end of the word under the
	cursor.

2011-12-13  Carsten Haitzler (The Rasterman)

        * Fix grab count negative values if you do weird combinations of
        press and release with multiple fingers or multiple mouse
        buttons.

2011-12-14  Cedric BAIL

	* Use Eina_File when loading bmp, ico, pmaps and wbmp files.
	* Fix potential race condition in wbmp loader code.

2011-12-14  Tom Hacohen (TAsn)

	* Textblock: Made "br" and "tab" default tags for newline and tab.
	* Textblock: Added "b" and "i" as default tags that can be overridden
	by style, and added the infra to support this.
	* Textblock: Added evas_textblock_text_utf8_to_markup
        
2011-12-16  Carsten Haitzler (The Rasterman)

        * Fix clip bug that shows up in buffer engine
        * Fix SSE3 routines with buggy output - disable
        * Add new api to set and get default event flags.

2011-12-19  Carsten Haitzler (The Rasterman)

        * Add new canvas events called just before and after evas rendering
        starts and stops.

2011-12-21  ChunEon Park (Hermet)

	* Events: repeat events should not be affected by children.
	Fixed to object passes events to the next object in the same layer
	if the repeat_events is enabled.

2011-12-23 Sanghee Park

        * Extend pixman support to allow other operations to use
          pixman when doing software rendering. On x86 this isn't useful
          but on ARMv7 with NEON pixman happens to do better with image
          blending and nearest scale blending.
        * Add tiled rotator for 32bit display as an option.

2011-12-26  Christopher Michael (devilhorns)

        * Add functions to get/set if an object is a 'frame_object'

2011-12-27  Carsten Haitzler (The Rasterman)

        * Add feature to get number of pressed devices (help fix
          ecore-evas bug).
